--- a/My_Web/style.css
+++ b/My_Web/style.css
@@ -1,16 +1,19 @@
 
-* {
+body {
   margin: 0%;
   padding: 0%;
+  background-color: #424242;
+
 }
 .wrap-top {
   display: flex;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(30, 30, 30);
 }
 .wrap-top nav {
   width: 100%;
   text-align: right;
   font-size: 0;
+  padding-right: 12vh;
 }
 .wrap-top nav a {
   display: inline-block;
@@ -19,18 +22,54 @@
   font-family: sans-serif;
   line-height: 52px;
   text-decoration: none;
-  margin: 0 10px;
-  padding: 0px 10px;
+  padding: 10px 32px;
 }
 .wrap-top nav a:hover {
-  background-color: rgba(74, 74, 74, 0.187);
+  background-color: rgba(84, 84, 84, 0.412);
 }
-.wrap-top a{
- color: #a6a6a6;
-  font-size: 18px;
-  font-family: sans-serif;
-  line-height: 52px;
+.logo {
+  display: flex;
+  width: 50%;
+}
+.logo a svg{
+    font-size: 32px;
+    padding: 5px 0px 0px 15px;
+}
+.logo a{
+  color: #a6a6a6;
+  font-size: 32px;
+  font-family: 'PT Sans', sans-serif;
+  line-height: 0px;
   text-decoration: none;
-  margin: 0 10px;
-  padding: 0px 10px;
+  margin: 0 0px;
+  padding-left: 18vh;
+}
+
+.wrap-center {
+    display:flex;
+    width: 100%;
+}
+.pagetext{
+    width: 100%;
+    padding-top: 10%;
+    padding-left: 20%;
+    display: inline-block;
+    text-align: left;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size: 36px ;
+    letter-spacing: 3px;
+    color: #e7e6e6;
+}
+.pageimg{
+    display: flex;
+    width: 50%;
+    padding:10%;
+}
+.pageimg img {
+    position: relative;
+    right: 50%;
+    width:100%;
+    height: 100%;
+    border-radius: 20px;
+    
 }
