--- a/style.css
+++ b/style.css
@@ -5,6 +5,30 @@ body {
   background-color: #424242;
 
 }
+
+
+.loding{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 1;
+  text-align: center;
+  padding:50vh 5% ;
+}
+
+#myProgress {
+  width: 90%;
+  background-color: grey;
+}
+
+#myBar {
+  width: 1%;
+  height: 30px;
+  background-color: green;
+}
+
+
 .wrap-top {
   display: flex;
   background-color: rgb(30, 30, 30);
@@ -62,7 +86,7 @@ body {
 }
 .pagetext p {
   position: relative;
-  animation: fadein 2s ;
+  animation: fadein 3s ;
     animation-timing-function: ease;
 }
 .pageimg{
@@ -76,12 +100,11 @@ body {
     width:100%;
     height: 100%;
     border-radius: 20px;
-
-    animation: fadein 2s ;
+    animation: fadein 3s ;
 }
 
 @keyframes fadein{
-    from {top: -300px;
+    from {top: -200px;
       opacity: .1;}
     to{top:0px;
       opacity:1;}
