--- a/about.css
+++ b/about.css
@@ -7,28 +7,6 @@ body {
 }
 
 
-.loding{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  z-index: 1;
-  text-align: center;
-  padding:50vh 5% ;
-}
-
-#myProgress {
-  width: 90%;
-  background-color: grey;
-}
-
-#myBar {
-  width: 1%;
-  height: 30px;
-  background-color: green;
-}
-
-
 .wrap-top {
   display: flex;
   background-color: rgb(30, 30, 30);
@@ -72,20 +50,21 @@ body {
 .wrap-center {
     display:flex;
     margin:10vh 10vw ;
-   
+    padding-left: 5vw;
 }
 .Pagetext{
     text-align: left;
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 36px ;
-    letter-spacing: .9px;
+    font-size: 28px ;
+    line-height: 10vh;
+    letter-spacing: 2px;
     color: #e7e6e6;
 }
 
 .Pageimg{
     display: flex;
     width: 50%;
-    margin-left: 5vw;
+    margin: 3vw;
 }
 .Pageimg img {
     border-radius: 20px;
