--- a/about.css
+++ b/about.css
@@ -1,8 +1,19 @@
 body {
   margin: 0%;
   padding: 0%;
-  background-color: #424242;
 
+}
+.line {
+  position: relative;
+  display: inline-block;
+  background-color: black;
+  justify-content: center;
+  width: 90%;
+  height: 1px;
+  left: 5%;
+  border-radius: 10px;
+  animation: LineFadein ;
+  animation-duration: 1.5s;
 }
 .wrap-center {
     display:flex;
@@ -36,4 +47,15 @@ body {
       opacity: .1;}
     to{top:0px;
       opacity:1;}
+}
+
+@keyframes LineFadein{
+  from {
+    width: 1%;
+    left: 50%
+  }
+  to {
+    width: 90%;
+    left: 5%;
+  }
 }
