--- a/about.css
+++ b/about.css
@@ -15,39 +15,7 @@ body {
   animation: LineFadein ;
   animation-duration: 1.5s;
 }
-.wrap-center {
-    display:flex;
-    margin:10vh 10vw ;
-    padding-left: 5vw;
-    animation-name: fadein;
-    animation-duration: 2s;
-}
-.Pagetext{
-    text-align: left;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size: 28px ;
-    line-height: 10vh;
-    letter-spacing: 2px;
-    color: #e7e6e6;
-}
 
-.Pageimg{
-    display: flex;
-    width: 50%;
-    margin: 3vw;
-}
-.Pageimg img {
-    border-radius: 20px;
-    width: 35vw;
-    
-}
-
-@keyframes fadein{
-    from {top: -10%;
-      opacity: .1;}
-    to{top:0px;
-      opacity:1;}
-}
 
 @keyframes LineFadein{
   from {
@@ -59,3 +27,112 @@ body {
     left: 5%;
   }
 }
+.wrap-center {
+    display:flex;
+    justify-content: center;
+    
+    margin:3vh 10vw ;
+    padding-left: 5vw;
+    
+    animation: loading;
+    animation-duration: 3s;
+}
+
+@keyframes loading{
+    0%{opacity: 0;}
+    50%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
+.Pagetext{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    position: relative;
+    text-align: left;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size: 28px ;
+    line-height: 10vh;
+    letter-spacing: 2px;
+    color: #000000;
+    animation: loading 2s ;
+}
+.Pagetext ul{
+    list-style-type: square;
+}
+.Pageimg{
+    position: relative;
+    left: -10%;
+    display: flex;
+    width: 50%;
+    margin: 3vw;
+
+    animation: loading 2s ;
+}
+.Pageimg img {
+    border-radius: 50%;
+    width: 35vw;
+}
+
+.wrap-centertwo{
+  display: flex; 
+}
+
+.wrap-centertwo p{
+  z-index: 2;
+  margin-top: 10vh;
+  margin-left: 15%;
+  
+  font-family: sans-serif;
+  font-size: 28px;
+  line-height: 8vh;
+  letter-spacing: 1vw;
+  text-align: left;
+  animation: loading 4s;
+}
+
+/*wave design start*/
+.wrapper{
+  z-index: 1;
+  width: 50%;
+  height: 100% ;
+  border-radius: 10px;
+  background: #fff;
+  position: absolute;
+  overflow: hidden;
+  transform: translate3d(0,0,0);
+  animation: loading 4s;
+}
+.wave {
+  background :linear-gradient(45deg, rgb(255, 170, 170), rgb(162, 154, 251));;
+  width: 100%;
+  height: 100%;
+  border-radius: 40%;
+  opacity: .4;
+  position: absolute;
+  top:10%;
+  left: -10%;
+  margin-left: -55%;
+  
+  transform-origin: center;
+  animation: drift 7s infinite linear;
+}
+.wave.two {
+  animation: drift 10s infinite linear;
+}
+.wave.three {
+  animation: drift 13s infinite linear;
+  opacity: 0.1;
+}
+
+
+@keyframes drift {
+  0%{
+    transform: rotate(0deg);
+  }100%{
+
+    transform: rotate(360deg);
+  }
+}
+
+/*wave design end*/
