--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 .ContactMe{
     width: 100%;
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
 
     font-size: 88px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -17,7 +17,7 @@
 
 .mail{
     display: inline-block;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 44px;
     margin-right: 1vw;
     
@@ -25,9 +25,44 @@
 
 .mailAccount{
     display: inline-block;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 32px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: .4vw;
 }
 
+
+.line {
+    position: relative;
+    display: inline-block;
+    background-color: black;
+    justify-content: center;
+    width: 90%;
+    height: 1px;
+    left: 5%;
+    border-radius: 10px;
+    animation: LineFadein ;
+    animation-duration: 1.5s;
+  }
+  
+  
+  @keyframes LineFadein{
+    from {
+      width: 1%;
+      left: 50%
+    }
+    to {
+      width: 90%;
+      left: 5%;
+    }
+  }
+  .material-symbols-outlined.mail{
+    transition: .6s;
+    border-radius: 50%;
+  }
+
+  .material-symbols-outlined.mail:hover{
+    padding: 10px;
+    background-color: rgba(81, 81, 81, 0.43);
+    color: rgba(18, 6, 54, 0.742);
+  }
