--- a/slideshow.css
+++ b/slideshow.css
@@ -23,6 +23,31 @@ body {
 }
 
 /*next and prev buttons*/
+.line {
+    position: relative;
+    display: inline-block;
+    background-color: black;
+    justify-content: center;
+    width: 90%;
+    height: 1px;
+    left: 5%;
+    border-radius: 10px;
+    animation: LineFadein ;
+    animation-duration: 1.5s;
+  }
+  
+  
+  @keyframes LineFadein{
+    from {
+      width: 1%;
+      left: 50%
+    }
+    to {
+      width: 90%;
+      left: 5%;
+    }
+  }
+
 
 .prev, .next{
     cursor: pointer;
