--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   position: absolute;
   overflow: hidden;
   transform: translate3d(0,0,0);
-  animation: fadein 6s;
+  animation: fadein 4s;
 }
 .wrapper.two{
   position: absolute;
@@ -23,14 +23,14 @@ body {
 }
 .wave {
   background :linear-gradient(45deg, rgb(255, 170, 170), rgb(162, 154, 251));;
-  width: 100%;
-  height: 100%;
+  width: 800px;
+  height: 800px;
   border-radius: 40%;
   opacity: .4;
   position: absolute;
   top:0%;
   left: 0%;
-  margin-left: -20vw;
+  margin-left: -25vw;
   
   transform-origin: center;
   animation: drift 7s infinite linear;
@@ -38,16 +38,16 @@ body {
 
 
 .waveLeft {
-  background:linear-gradient(30deg, rgb(196, 135, 125), rgb(196, 193, 235));;
-  width: 100%;
-  height: 100%;
+  background:linear-gradient(30deg, rgb(196, 135, 125), rgb(196, 193, 235));
+  width: 600px;
+  height: 600px;
   border-radius: 40%;
   opacity: .4;
   position: absolute;
   bottom:0%;
   right: 0%;
-  margin-right:-20vw;
-  margin-bottom:-50vh; ;
+  margin-right:-30vw;
+  margin-bottom:-10vh; 
   
   transform-origin: center;
   animation: drift 7s infinite linear;
@@ -75,7 +75,7 @@ body {
   0%{
     transform: rotate(0deg);
   }100%{
-
+    
     transform: rotate(360deg);
   }
 }
@@ -94,23 +94,24 @@ body {
 }
 
 .wrap-center {
-    display:flex;
-    width: 100%;
+  display:flex;
+  width: 100%;
 }
 .pagetext{
-    width: 100%;
-    padding-top: 10%;
-    padding-left: 20%;
-    display: inline-block;
-    text-align: left;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size: 36px ;
-    letter-spacing: 3px;
-    color: #000000;
+  width: 100%;
+  padding-top: 10%;
+  padding-left: 20%;
+  display: inline-block;
+  text-align: left;
+  font-family: 'Noto Sans TC', sans-serif;
+  font-size: 36px ;
+  letter-spacing: 3px;
+  color: #000000;
+  line-height: 10vh;
 }
 .pagetext p {
   position: relative;
-  animation: fadein 3s ;
+  animation: fadein 2s ;
   animation-timing-function: ease;
 }
 
@@ -118,29 +119,59 @@ body {
 @keyframes fadein{
   0%{opacity: 0%;
     top: -200px;}
-  25%{}
-  50%{opacity: 0%}
-  100%{
+    25%{}
+    50%{opacity: 0%}
+    100%{
       top: 0%;
       opacity: 1;
     }
-}
-@keyframes fadein_wave{
-  0%{opacity: 0%;}
-  50%{opacity: 0%}
-  100%{
+  }
+  @keyframes fadein_wave{
+    0%{opacity: 0%;}
+    50%{opacity: 0%}
+    100%{
       opacity: 1;
     }
-}
-
-@keyframes LineFadein{
-  from {
-    width: 1%;
-    left: 50%
-  }
-  to {
-    width: 90%;
-    left: 5%;
   }
   
-}
+  @keyframes LineFadein{
+    from {
+      width: 1%;
+      left: 50%
+    }
+    to {
+      width: 90%;
+      left: 5%;
+    }
+  
+  }
+  
+  @media only screen and (max-width:1200px){
+    .wave{
+      width: 600px;
+      height: 600px;
+    }
+  }
+  
+  @media only screen and (max-width:900px){
+    .wave{
+      top: 20%;
+      width: 400px;
+      height: 400px;
+    }
+    .waveLeft{
+      width: 400px;
+      height: 400px;
+    }
+  }
+  @media only screen and (max-width:900px){
+    .wave{
+      top: 25%;
+      width: 300px;
+      height: 300px;
+    }
+    .waveLeft{
+      width: 300px;
+      height: 300px;
+    }
+  }
