--- a/about.css
+++ b/about.css
@@ -12,6 +12,7 @@ body {
   height: 1px;
   left: 5%;
   border-radius: 10px;
+  z-index: 1;
   animation: LineFadein ;
   animation-duration: 1.5s;
 }
@@ -50,15 +51,26 @@ body {
     justify-content:center;
     position: relative;
     text-align: left;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size: 28px ;
-    line-height: 10vh;
-    letter-spacing: 2px;
     color: #000000;
     animation: loading 2s ;
+    line-height: 52px;
 }
+
+.Pagetext h1 {
+  font-size: 36px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 500;
+}
+
 .Pagetext ul{
     list-style-type: square;
+}
+
+.Pagetext ul li {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  letter-spacing: 3px;
 }
 .Pageimg{
     position: relative;
@@ -88,29 +100,28 @@ body {
   line-height: 8vh;
   letter-spacing: 1vw;
   text-align: left;
-  animation: loading 4s;
+  animation: loading 2s;
 }
 
 /*wave design start*/
 .wrapper{
   z-index: 1;
-  width: 50%;
-  height: 100% ;
+  width: 30%;
+  height:60% ;
   border-radius: 10px;
   background: #fff;
   position: absolute;
-  overflow: hidden;
   transform: translate3d(0,0,0);
-  animation: loading 4s;
+  animation: loading 2s;
 }
 .wave {
-  background :linear-gradient(45deg, rgb(255, 170, 170), rgb(162, 154, 251));;
+  background :linear-gradient(45deg, rgb(255, 170, 170), rgb(162, 154, 251));
   width: 100%;
   height: 100%;
   border-radius: 40%;
   opacity: .4;
   position: absolute;
-  top:10%;
+  top: 5%;
   left: -10%;
   margin-left: -55%;
   
