--- a/AnimationalIcon.css
+++ b/AnimationalIcon.css
@@ -1,7 +1,7 @@
 .Bar-container{
     cursor: pointer;
     display: inline-block;
-    position: absolute;
+    position: fixed;
     left: 0;
     padding: 10px;
     margin-right: 15px;
