--- a/SearchMenu.css
+++ b/SearchMenu.css
@@ -14,7 +14,7 @@
     width: 15vw;
     height: 100vh;
     display: inline-block;
-    position:absolute;
+    position:fixed;
     left: -15vw;
     transition: .4s;
 }
