--- a/slideshow.css
+++ b/slideshow.css
@@ -13,7 +13,7 @@ body {
  
 /*slideshow container */
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 50vw;
     position: relative;
     margin: auto;
 }
@@ -118,4 +118,23 @@ body {
 @keyframes fade {
     from {opacity: 0.4}
     to {opacity: 1}
+}
+
+.SellingPageBox{
+    margin-top: 10vh;
+}
+
+.ImgWrap a{
+    display: flex;
+    justify-content: center;
+}
+.ImgWrap img{
+    border: #717171 2px solid;
+    padding: 30px;
+    width: 70%;
+}
+.ImgText{
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
 }
