--- a/slideshow.css
+++ b/slideshow.css
@@ -8,6 +8,8 @@ body {
     margin: 0%;
     padding: 0%;
     box-sizing: content-box;
+    width: 100%;
+    height: 100%;
   }
   
  
@@ -137,4 +139,8 @@ body {
     display: flex;
     justify-content: center;
     font-size: 24px;
+}
+
+.ProfileBox{
+    margin-top: 10vh;
 }
